# LazyBull

./: .env.example  .gitignore  CHANGELOG_PR.md  CHANGELOG_v0.2.0.md  CLEAN_LAYER_SUMMARY.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OLD.md  ML_BACKTEST_FIX_SUMMARY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  PR_SUMMARY_REFACTORING.md  README.md  README.md.new  pyproject.toml  requirements.txt
configs/: base.yaml  runtime_cloud.yaml  runtime_local.yaml  strategy_dividend_value.yaml
docs/: BREAKING_CHANGES.md  PR_SUMMARY.md  amount_filter_guide.md  backtest_assumptions.md  batch_rebalance_guide.md  data_contract.md  development_conventions.md  equity_curve_guide.md  features_schema.md  ic_optimization_guide.md  implementation_summary.md  migration_partitioned_storage.md  ml_usage_guide.md  paper_trading_guide.md  position_completion_guide.md  price_type_guide.md  refactoring_guide.md  roadmap.md  sell_timing_guide.md  stop_loss_guide.md  trade_status_guide.md  volume_filter_guide.md
examples/: backtest_example.py
scripts/: batch_backtest.ps1  build_clean.py  build_clean_features.py  build_features.py  demo_features.py  download_raw.py  example_partitioned_storage.py  paper_trade.py  paper_trade_tplus1.py  pull_data.py  run_backtest.py  run_ml_backtest.py  test.py  test_e2e_clean.py  train_ml_model.py  update_basic_data.py  validate_changes.py
tests/: conftest.py  test_backtest_price_separation.py  test_backtest_t1.py  test_calendar.py  test_cleaner.py  test_config.py  test_cost.py  test_ensure_and_t0_printing.py  (+22 more)
(+52 files in other folders)
