[tool.poetry]
name = "lazybull"
version = "0.3.4"
description = "A股量化研究与回测框架 - 专注价值红利策略"
authors = ["deltree-y"]
readme = "README.md"
packages = [{include = "lazybull", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.13"
tensorflow = "~2.10.0"
pandas = "^1.5.0"
numpy = "^1.23.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
pyarrow = "^10.0.0"
loguru = "^0.6.0"
tushare = "^1.2.89"
xgboost = "^1.7.0"
scikit-learn = "^1.2.0"
joblib = "^1.2.0"
tqdm = "^4.64.0"
scipy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^5.0.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
